adds design attribution

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1659,7 +1659,6 @@ pre code {
   font-weight: 400;
   font-style: normal;
 }
-
 .icon {
   display: inline-block;
   font-family: FontAwesome;
@@ -3175,7 +3174,7 @@ img {
 }
 
 .site-title {
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .portfolio .portfolio-title {
@@ -3190,3 +3189,5 @@ img {
 .text--medium {
   font-weight: 600;
 }
+
+/*# sourceMappingURL=style.css.map */
