--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1166,12 +1166,12 @@ a [class*=" icon-"], a [class^=icon-] {
 }
 
 .site-title {
-  margin-bottom: 12px;
-  padding-top: 48px;
+  padding-top: 12px;
   color: #fff;
   font-weight: 400;
   font-size: 58px;
   font-size: 3.625rem;
+  margin-bottom: 12px;
 }
 
 .site-title.alt {
@@ -3167,14 +3167,14 @@ img {
 
 .site-title {
   padding-top: 0;
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 700;
   color: inherit;
 }
 
 .site-lede {
   margin-bottom: 8px;
-  font-size: 24px;
+  font-size: 22px;
   /*font-weight: bold;*/
   text-align: center;
 }
@@ -3197,14 +3197,23 @@ img {
 }
 
 #avatar {
-  width: 140px;
+  width: 115px;
   margin: 20px 0;
   display: inline-block;
   vertical-align: middle;
-  position: relative;
-  box-shadow: 0 0 10px #ddd;
-  border: 3px solid #fff;
   border-radius: 50%;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+#avatar:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  transform: scale(1.1);
+  /*border-style: solid;*/
+  /*border-color: #fff;*/
+
 }
 
 .fa-map-marker {
